--- a/vue/package.json
+++ b/vue/package.json
@@ -16,8 +16,10 @@
     "mescroll.js": "^1.4.1",
     "mint-ui": "^2.2.13",
     "qs": "^6.9.1",
+    "swiper": "^5.2.1",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^3.1.3",
+    "vue-cookie": "^1.1.4",
     "vue-router": "^3.0.1",
     "vuex": "^3.1.2"
   },
